--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="wrapper">
+    <div class="wrapper wrapper-position">
         <nav class="nav">
             <ul class="menu">
-                <li class="menu__item">Tasks</li>
+                <li class="menu__item--active">Tasks</li>
                 <li class="menu__item">Done</li>
                 <li class="menu__item">Timer</li>
             </ul>
@@ -24,12 +25,18 @@
                 <h2>Dec 03, 2020</h2>
             </header>
             <form class="add-form" action="">
-                <input class="add-form__input" type="text" placeholder="Add a task...">
-                <ul class="tasks">
-                    <li class="tasks__item">pogłaskać kota</li>
-                    <li class="tasks__item">nakarmić kota</li>
-                </ul>
+                <input class="input add-form__input" type="text" placeholder="Add a task...">
             </form>
+            <ul class="tasks">
+                <li class="tasks__item"><input class="checkbox tasks__checkbox" type="checkbox">pogłaskać kota, potem go
+                    nakarmić</li>
+                <li class="tasks__item"><input class="checkbox tasks__checkbox" type="checkbox">nakarmić kota, potem go
+                    pogłaskać</li>
+                <li class="tasks__item"><input class="checkbox tasks__checkbox" type="checkbox">nakarmić kota, potem go
+                    pogłaskać</li>
+                <li class="tasks__item"><input class="checkbox tasks__checkbox" type="checkbox">nakarmić kota, potem go
+                    pogłaskać</li>
+            </ul>
         </main>
     </div>
 
