update html, add check/uncheck function

--- a/index.html
+++ b/index.html
@@ -21,22 +21,13 @@
         </nav>
         <main>
             <header class="actual-date">
-                <h1>Monday</h1>
-                <h2>Dec 03, 2020</h2>
+                <h1 data-time="day">Monday</h1>
+                <h2 data-time="month">Dec 03, 2020</h2>
             </header>
             <form class="add-form" action="">
                 <input class="input add-form__input" type="text" placeholder="Add a task...">
             </form>
-            <ul class="tasks">
-                <li class="tasks__item"><input class="checkbox tasks__checkbox" type="checkbox">pogłaskać kota, potem go
-                    nakarmić</li>
-                <li class="tasks__item"><input class="checkbox tasks__checkbox" type="checkbox">nakarmić kota, potem go
-                    pogłaskać</li>
-                <li class="tasks__item"><input class="checkbox tasks__checkbox" type="checkbox">nakarmić kota, potem go
-                    pogłaskać</li>
-                <li class="tasks__item"><input class="checkbox tasks__checkbox" type="checkbox">nakarmić kota, potem go
-                    pogłaskać</li>
-            </ul>
+            <ul class="tasks"></ul>
         </main>
     </div>
 
