--- a/timer.html
+++ b/timer.html
@@ -21,15 +21,22 @@
         </nav>
         <main>
             <header class="timer">
-                <h1 data-time="day">Take your time</h1>
+                <h1 data-time="day">Timer</h1>
+                <h2 data-time="month">Dec 03, 2020</h2>
             </header>
+            <container>
+                <div class="button"></div>
+                <div class="records">
+                    <ul class="times"></ul>
+                </div>
+                <div class="button"></div>
+            </container>
+            <div class="stoper">
+                <div class="time">---</div>
+            </div>
             <div class="buttons">
                 <button class="main">START</button>
                 <button class="reset">RESET</button>
-            </div>
-            <div class="stoper">
-                <p>Start time</p>
-                <div class="time">---</div>
             </div>
         </main>
     </div>
