--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h2 data-time="month">Dec 03, 2020</h2>
             </header>
             <form class="add-form" action="">
-                <input class="input add-form__input" type="text" placeholder="Add a task..."
+                <input class="input add-form__input" name="item" type="text" placeholder="Add a task..."
                     title="type here your new task">
             </form>
             <ul class="tasks"></ul>
