fix paths to files

--- a/timer.html
+++ b/timer.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Timer</title>
-  <link rel="stylesheet" type="text/css" href="/css/timer.css">
+  <link rel="stylesheet" type="text/css" href="css/timer.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700&display=swap" rel="stylesheet">
 </head>
 
@@ -47,7 +47,7 @@
     </div>
   </div>
 
-  <script src="/js/timer.js"></script>
+  <script src="js/timer.js"></script>
 </body>
 
 </html>
