--- a/calendar.html
+++ b/calendar.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calendar</title>
-  <link rel="stylesheet" type="text/css" href="/css/calendar.css">
+  <link rel="stylesheet" type="text/css" href="css/calendar.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700&display=swap" rel="stylesheet">
 </head>
 
@@ -32,7 +32,7 @@
     </div>
   </div>
 
-  <script src="/js/calendar.js"></script>
+  <script src="js/calendar.js"></script>
 </body>
 
 </html>
